force-app/main/default/objects/synety__CloudCallCampaignCodes__c/synety__CloudCallCampaignCodes__c.object-meta.xml
<CustomObject>
    <label>CloudCallCampaignCodes</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CloudCallCampaignCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>