force-app/main/default/objects/synety__CloudCallCampaignCodes__c/fields/synety__CloudCall_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>synety__CloudCall_Campaign_Code__c</fullName>
    <label>CloudCall Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>