force-app/main/default/objects/synety__CloudCallCampaignCodes__c/fields/synety__CloudCall_CampaignId__c.field-meta.xml
<CustomField>
    <fullName>synety__CloudCall_CampaignId__c</fullName>
    <label>CloudCall CampaignId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>