force-app/main/default/objects/synety__CloudCallCampaignCodes__c/fields/synety__CloudCall_Platform__c.field-meta.xml
<CustomField>
    <fullName>synety__CloudCall_Platform__c</fullName>
    <label>CloudCall Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>